<?xml version="1.0"?>
<package>
  <name>ros_computer_msgs</name>
  <version>0.0.0</version>
  <description>The ros_computer_msgs package</description>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/ros_computer_msgs</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
</package>
