<?xml version="1.0"?>
<package>
  <name>ros_hard_drive</name>
  <version>0.0.0</version>
  <description>The ros_hard_drive package</description>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/ros_hard_drive</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>ros_computer_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>ros_computer_msgs</run_depend>

  
</package>
