<?xml version="1.0"?>
<package>
  <name>ros_top</name>
  <version>0.4.1</version>
  <description>For monitoring ROS processes.</description>

  <author email="dan@lazewatsky.com">Dan Lazewatsky</author>
  <maintainer email="dan@lazewatsky.com">Dan Lazewatsky</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ros_top</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosnode</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>ros_computer_msgs</build_depend>

  <run_depend>python-psutil</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosnode</run_depend>
  <run_depend>ros_computer_msgs</run_depend>
</package>
