<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_top</name>
  <version>0.4.1</version>
  <description>For monitoring ROS processes.</description>

  <maintainer email="dan@lazewatsky.com">Dan Lazewatsky</maintainer>
  <license>BSD 3-clause</license>
  <author email="dan@lazewatsky.com">Dan Lazewatsky</author>
  <depend>computer_msgs</depend>
  <depend>rclpy</depend>
  <exec_depend>python3-psutil</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
